--- a/src/App.css
+++ b/src/App.css
@@ -12,12 +12,12 @@
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* align-items: flex-start;
+  justify-content: center; */
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(92, 202, 236);
 }
 
 .App-link {
